# esp32-c3-meepy

./: .envrc  Cargo.toml  flake.nix  justfile  rust-toolchain.toml  secrets.yaml
.cargo/: config.toml
src/: main.rs
